--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
@@ -18,8 +19,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
-    "sort-by": "^1.2.0"
+    "react-toastify": "^10.0.5",
+    "sort-by": "^1.2.0",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
