--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
