--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.1.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.8",
